-修改rocketmq关闭文件没有指定关闭broker和server的问题